--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,9 +1,13 @@
 import * as S from './styles'
 
-const {{pascalCase name}} = () => (
-<S.Wrapper>
-  <h1>{{pascalCase name}}</h1>
-</S.Wrapper>
-)
+export type {{pascalCase name}}Props = {
+  children?: React.ReactNode
+}
 
-export default {{pascalCase name}}
+export default function {{pascalCase name}}(props: {{pascalCase name}}Props) {
+  return (
+    <S.Wrapper>
+      <h1>Button</h1>
+    </S.Wrapper>
+  )
+}
